--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev":"tsx src/server.ts"
+    "dev": "tsx src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "@supabase/supabase-js": "^2.49.9",
     "@types/node": "^22.15.29",
     "dotenv": "^16.5.0",
@@ -17,5 +18,8 @@
     "tsup": "^8.5.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "prisma": "^6.9.0"
   }
 }
